--- a/src/styles.css
+++ b/src/styles.css
@@ -2,26 +2,100 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
-  -neutral-900: hsl(227, 75%, 14%);
-  -neutral-800: hsl(226, 25%, 17%);
-  -neutral-700: hsl(225, 23%, 24%);
-  -neutral-600: hsl(226, 11%, 37%);
-  -neutral-300: hsl(0, 0%, 78%);
-  -neutral-200: hsl(217, 61%, 90%);
-  -neutral-100: hsl(0, 0%, 93%);
-  -neutral-0: hsl(200, 60%, 99%);
+  --neutral-900: hsl(227, 75%, 14%);
+  --neutral-800: hsl(226, 25%, 17%);
+  --neutral-700: hsl(225, 23%, 24%);
+  --neutral-600: hsl(226, 11%, 37%);
+  --neutral-300: hsl(0, 0%, 78%);
+  --neutral-200: hsl(217, 61%, 90%);
+  --neutral-100: hsl(0, 0%, 93%);
+  --neutral-0: hsl(200, 60%, 99%);
 
-  -red-400: hsl(3, 86%, 64%);
-  -red-500: hsl(3, 71%, 56%);
-  -red-700: hsl(3, 77%, 44%);
+ --red-400: hsl(3, 86%, 64%);
+  --red-500: hsl(3, 71%, 56%);
+  --red-700: hsl(3, 77%, 44%);
 
-  -light-gradient: linear-gradient(180deg, #ebf2fc 0%, #eef8f9 100%);
-  -dark-gradient: linear-gradient(180deg, #040918 0%, #091540 100%);
+  --light-gradient: linear-gradient(180deg, #ebf2fc 0%, #eef8f9 100%);
+  --dark-gradient: linear-gradient(180deg, #040918 0%, #091540 100%);
 }
 
 * {
   margin: 0px;
   padding: 0px;
+  border: 0px;
   box-sizing: border-box;
+  color: white;
+  font-family: "Noto sans";
 }
 
+body {
+  width: 100%;
+ height: 100dvh;
+  background: var(--dark-gradient) no-repeat;
+}
+
+.container {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 20px;
+
+
+}
+ .focused:focus{
+  outline: 2px solid var(--red-400);
+ }
+
+.extensionMode {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  margin-top: 1rem;
+  border-radius: 10px;
+  background-color: var(--neutral-700);
+  padding: 10px;
+}
+
+#btnThemeMode {
+  width: 2.6rem;
+  height: 2.6rem;
+  background-color: var(--neutral-600);
+  border-radius: 7px;
+}
+#categoriaCenter {
+  margin-top: 2rem;
+}
+
+#extensionList {
+text-align: center;
+}
+.selecao {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
+  padding: 10px;
+  gap: 10px;
+}
+.selecao button {
+  background-color: var(--neutral-700);
+  font-size: 1.3rem;
+  border-radius: 1.5rem;
+  padding: 0.9rem;
+  flex-basis: 300px;
+  flex-grow: 1;
+  flex-shrink: 1;
+}
+
+.containerItem {
+  background-color: var(--neutral-700);
+  border-radius: 15px;
+  padding: 20px;
+  border: 1px solid grey;
+}
+
+.logo{
+  float: left;
+}
