--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,6 @@
 
 body {
   width: 100%;
-  height: 100dvh;
   background: var(--dark-gradient) no-repeat;
   overflow-x: hidden;
 }
@@ -61,6 +60,7 @@ body {
   height: 2.6rem;
   background-color: var(--neutral-600);
   border-radius: 7px;
+  cursor: pointer;
 }
 #categoriaCenter {
   margin-top: 2rem;
@@ -78,6 +78,7 @@ body {
   padding: 10px;
   gap: 10px;
 }
+
 .selecao button {
   background-color: var(--neutral-700);
   font-size: 1.3rem;
@@ -86,7 +87,12 @@ body {
   flex-basis: 300;
   flex-grow: 1;
   flex-shrink: 1;
-  
+  cursor: pointer; 
+}
+.divisao {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 10px;
 }
 
 .containerItem {
@@ -103,6 +109,7 @@ body {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  align-items: center;
 }
 #remove {
   background-color: transparent;
@@ -110,6 +117,12 @@ body {
   padding: 10px;
   border-radius: 20px;
   font-size: 1rem;
+  cursor: pointer;
+}
+
+#remove:hover {
+  background-color: var(--red-500);
+  color: var(--neutral-900);
 }
 #active {
   background-color: transparent;
@@ -138,7 +151,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #2a2e39; /* cor de fundo desligado */
+  background-color: var(--neutral-600); /* cor de fundo desligado */
   transition: 0.3s;
   border-radius: 20px;
 }
@@ -151,7 +164,7 @@ body {
   width: 14px;
   left: 3px;
   bottom: 3px;
-  background-color: #ff4d4d; /* vermelho */
+  background-color: var(--neutral-0);
   transition: 0.3s;
   border-radius: 50%;
 }
